# datas

./: README.md  pyproject.toml
.github/workflows/: publish.yml
datas/: __init__.py  funcoes.py
tests/: test_funcoes.py
